--- a/PianoNote/Asset/Base.lproj/Main.storyboard
+++ b/PianoNote/Asset/Base.lproj/Main.storyboard
@@ -39,6 +39,15 @@
                     <view key="view" contentMode="scaleToFill" id="CeF-fA-UR9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfx-9n-KJ0">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="actionWithNewFolder:" destination="8Vc-Dg-PzA" eventType="touchUpInside" id="Jwp-bX-Uki"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="ORQ-wW-Erq"/>
                     </view>
@@ -61,6 +70,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="newFolderButton" destination="mfx-9n-KJ0" id="cIb-JA-h5f"/>
                         <segue destination="API-DF-QvD" kind="show" identifier="RecycleViewController" id="AHL-CH-INX"/>
                         <segue destination="95L-A7-jOY" kind="show" identifier="InfoViewController" id="9Tz-bA-BZ1"/>
                         <segue destination="ok0-aC-h19" kind="show" identifier="FacebookViewController" id="Ayy-rH-KOu"/>
