--- a/PianoNote/Asset/Base.lproj/Main2.storyboard
+++ b/PianoNote/Asset/Base.lproj/Main2.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="voS-mc-aRm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search View Controller-->
+        <!--검색-->
         <scene sceneID="xeO-sG-19Z">
             <objects>
                 <viewController storyboardIdentifier="SearchViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="voS-mc-aRm" customClass="SearchViewController" customModule="PianoNote" customModuleProvider="target" sceneMemberID="viewController">
@@ -100,6 +100,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="voS-mc-aRm" id="D8O-pD-zsT"/>
+                                    <outlet property="delegate" destination="voS-mc-aRm" id="fzA-vX-NF8"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -111,13 +115,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IjO-uq-kuh"/>
                     </view>
+                    <navigationItem key="navigationItem" title="검색" id="Ctz-o6-2Wk"/>
                     <connections>
                         <outlet property="tableView" destination="Sjs-ME-WJf" id="yNP-9c-6a6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J4x-FO-egl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="464.80000000000001" y="280.20989505247377"/>
+            <point key="canvasLocation" x="1404" y="280.20989505247377"/>
         </scene>
     </scenes>
     <resources>
