--- a/PianoNote/ViewController/MainNoteDetail/ImageCardDetailViewController.xib
+++ b/PianoNote/ViewController/MainNoteDetail/ImageCardDetailViewController.xib
@@ -1,13 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImageCardDetailViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImageCardDetailViewController" customModule="PianoNote" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="ZgJ-S4-KcA" id="Yqr-hW-QFa"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,7 +20,56 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHE-ni-kIQ">
+                    <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <items>
+                        <navigationItem title="사진" largeTitleDisplayMode="never" id="4TE-pi-A7T">
+                            <barButtonItem key="leftBarButtonItem" title="adsf" style="plain" id="JJW-XS-A8n">
+                                <connections>
+                                    <action selector="closeButtonTouched:" destination="-1" id="IEp-5g-hwe"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem key="rightBarButtonItem" systemItem="done" id="vGJ-aP-YtL">
+                                <connections>
+                                    <action selector="doneButtonTouched:" destination="-1" id="ksK-1Y-CB5"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jpd-mE-NmO">
+                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                    <items>
+                        <barButtonItem systemItem="edit" id="65j-Fn-9mo"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="g41-hy-J1F"/>
+                        <barButtonItem title="Item" id="1eV-em-vDM"/>
+                    </items>
+                </toolbar>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZgJ-S4-KcA">
+                    <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="a7W-k6-1Q6">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZgJ-S4-KcA" secondAttribute="trailing" id="62g-7D-VUQ"/>
+                <constraint firstItem="bHE-ni-kIQ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="K6t-Pw-GLL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Jpd-mE-NmO" secondAttribute="bottom" id="PyE-Vp-8OW"/>
+                <constraint firstAttribute="trailing" secondItem="Jpd-mE-NmO" secondAttribute="trailing" id="WW8-Ke-m5d"/>
+                <constraint firstItem="ZgJ-S4-KcA" firstAttribute="top" secondItem="bHE-ni-kIQ" secondAttribute="bottom" id="cGa-Sd-V9d"/>
+                <constraint firstItem="bHE-ni-kIQ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="cWS-2O-khi"/>
+                <constraint firstItem="Jpd-mE-NmO" firstAttribute="top" secondItem="ZgJ-S4-KcA" secondAttribute="bottom" id="htT-Sl-XWi"/>
+                <constraint firstItem="ZgJ-S4-KcA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="kgy-a6-c4r"/>
+                <constraint firstItem="Jpd-mE-NmO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="lZ7-zG-nZ8"/>
+                <constraint firstItem="bHE-ni-kIQ" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="u8O-eQ-Pbu"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
     </objects>
